style: prevent whitespace wrap

--- a/apps/client/src/features/rundown/quick-add-block/QuickAddBlock.module.scss
+++ b/apps/client/src/features/rundown/quick-add-block/QuickAddBlock.module.scss
@@ -18,7 +18,7 @@
   .quickBtn {
     font-weight: 400;
     width: auto;
-    padding: 0 2rem;
+    padding: 0 1rem;
   }
 }
 
